# uagents-a2a-adapter

./: CHANGELOG.md  DEVELOPMENT.md  LICENSE  MEDIUM_ARTICLE.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: airbnb_agent_bridge.py  finance_agent_bridge.py  perplexity_agent_bridge.py
src/uagents_a2a_adapter/: __init__.py  __main__.py
tests/: test_adapter.py
