[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uagents-a2a-adapter"
version = "0.1.0"
description = "Bridge Fetch.ai uAgents with Google's Agent-to-Agent Protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Radhika Danda", email = "radhika@fetch.ai"}
]
maintainers = [
    {name = "Radhika Danda", email = "radhika@fetch.ai"}
]
keywords = ["ai", "agents", "fetch", "google", "a2a", "protocol", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "uagents>=0.22.3",
    "pydantic>=2.8,<3.0",
    "requests>=2.32.0,<3.0",
    "a2a-sdk[all,sqlite]>=0.2.11",
    "uvicorn>=0.27.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/radhikadanda/uagents-a2a-adapter"
Repository = "https://github.com/radhikadanda/uagents-a2a-adapter"
Documentation = "https://github.com/radhikadanda/uagents-a2a-adapter#readme"
"Bug Tracker" = "https://github.com/radhikadanda/uagents-a2a-adapter/issues"

[project.scripts]
uagents-a2a = "uagents_a2a_adapter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst", "*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
